# CryptoTaxCalc

./: .gitignore  BACKUP.md  COLLAB_RULES.md  CryptoTaxCalc.env.documented.safe  README.md  RELEASE_CHECKLIST.md  app.py  check_bnb_eur.py  check_bnb_rates.py  check_realized_days.py  check_realized_days_run.py  cryptotaxcalc.db  csv_normalizer.py  data.db-shm  data.db-wal  pyproject.toml  pytest.ini  requirements.txt  sample.csv  schemas.py  t -q -m not smoke  test_calc_determinism.sqlite-shm
automation/: AUTO_EVOLVE.md  collect_support_bundle.ps1  collect_support_bundle.py  dev_hot_reload.ps1  eurofxref-hist.csv  fx_ecb.csv  generate_task_xml.py  git_auto_push.ps1  nightly_fx_task.xml  nightly_smoke_task.xml  run_smoke_and_email.py  run_smoke_wrapper.ps1  trello_sync.py  update_fx.ps1
backups/: data_backup_2025-10-17.db.db  data_backup_2025-10-20_08-40-36.db  data_before_restore_2025-10-17_22-35-54.db
demo/: demo.sqlite-shm  demo.sqlite-wal
docs/: Privacy_and_Data_Processing.md  Terms_of_Use.md
logs/: workspace_error_log_path.txt
rules/: base.py  hr.py  it.py
samples/: sample.csv  sample2.csv  sample3.csv
src/: cryptotaxcalc.db
static/: dashboard_override.css  glow.js  theme.css  theme.js
templates/: admin_csv_unsupported.html  base.html  csv_formats.html  demo_dashboard.html  history.html  workspace.html  workspace_results.html
tests/: conftest.py  smoke_test.py  test_admin_support_endpoint_safety.py  test_api_error_contracts.py  test_artifact_secret_leakage.py  test_audit_reproducibility.py  test_audit_tamper_detection.py  test_backup_restore_integrity.py  test_calc_determinism.py  test_calculation_determinism_api.py  test_calculation_run_persistence.py  test_calculation_run_trace_file.py  test_ci_workflow_smoke_command.py  test_client_issue_report_page.py  test_configuration_environment_safety.py  test_csv_import_diagnostics_product.py  test_csv_source_registry_integrity.py  test_csv_source_registry_self_update.py  test_csv_sources.py  test_currency_fx_regression.py  test_dashboard_data_quality_contracts.py  test_db_referential_integrity.py  test_decimal_precision_regression.py  test_demo_builder_contracts.py  test_demo_builder_exe_diagnostics.py  test_demo_builder_launcher_layout.py  test_demo_builder_optional_data_paths.py  test_demo_builder_syntax.py  test_demo_exposure_audit.py  test_dependency_ci_parity_guards.py  (+77 more)
(+662 files in other folders)
