[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptotaxcalc"
version = "0.4.8"
description = "Crypto tax calculation engine for Croatia and Italy"
authors = [{ name = "Your Name" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "sqlalchemy>=2.0",
    "pydantic>=2.5",
    "pandas",
    "numpy",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
    "reportlab>=4.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "httpx", "black", "ruff", "mypy", "pre-commit"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

markers = [
  "smoke: smoke tests",
]

[tool.black]
line-length = 100
target-version = ["py311"]
skip-string-normalization = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP"]
ignore = ["E501"]  # optional: let black handle line length

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict_optional = true
disallow_untyped_defs = true
